Change all newlines to <br/> in posts when output to the page. Fixed some minor layout issues.

--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -47,8 +47,7 @@ a {
 	display: block;
 	padding: 10px 10px;
 	border-left: 1px solid #469DF5;
-	margin-left: 10px;
-
+	margin: 10px;
 }
 #container {
 	width: 50%;
